--- a/apps/mobile-app-name/package.json
+++ b/apps/mobile-app-name/package.json
@@ -7,6 +7,9 @@
     "id": "org.nativescript.mobileappname",
     "tns-android": {
       "version": "3.3.1"
+    },
+    "tns-ios": {
+      "version": "3.3.0"
     }
   },
   "dependencies": {
